src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Age__c</fullName>
        <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Outcome__c</fullName>
        <label>Activity Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Barrier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <description>Outreach Call Recording</description>
        <label>Call Recording</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Guid__c</fullName>
        <description>Unique ID for HubSpot related Tasks</description>
        <label>Guid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoftReplyCount__c</fullName>
        <label>SalesLoft Reply Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Cadence_ID__c</fullName>
        <label>SalesLoft Cadence ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Cadence_Name__c</fullName>
        <label>SalesLoft Cadence Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Clicked_Count__c</fullName>
        <label>SalesLoft Clicked Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Email_Template_ID__c</fullName>
        <label>SalesLoft Email Template ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Email_Template_Title__c</fullName>
        <label>SalesLoft Email Template Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Engagement_Step_Day__c</fullName>
        <formula>VALUE(SalesLoft_Step_Day__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesLoft Engagement Step Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft_External_Identifier__c</fullName>
        <label>SalesLoft Cadence External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Step_Day__c</fullName>
        <label>SalesLoft Step Day</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Step_ID__c</fullName>
        <label>SalesLoft Step ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Step_Name__c</fullName>
        <label>SalesLoft Step Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Step_Type__c</fullName>
        <label>SalesLoft Step Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft_Viewed_Count__c</fullName>
        <label>SalesLoft Viewed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the local time for the related Lead or Contact.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset__c), 
&quot;Unknown&quot;, 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp; 
LEFT( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp; 
TEXT( 
IF( 
OR( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 12 
), 
12, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp;&quot;:&quot;&amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 15, 2 ) 
&amp;&quot; &quot;&amp; 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
) 
&amp; &quot; &quot; &amp; 
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;) 
)</formula>
        <inlineHelpText>Shows the local time for the related Lead or Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset__c</fullName>
        <description>Shows the UTC timezone offset of the Lead / Contact associated with the task.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Lead / Contact associated with the task.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>